--- a/uploadcare.cabal
+++ b/uploadcare.cabal
@@ -22,6 +22,7 @@ library
                , cryptohash   >= 0.7.5   && < 0.8
                , hex          >= 0.1.2   && < 0.2
                , http-conduit == 1.6.0.*
+               , http-types   >= 0.7.1   && < 0.8
                , old-locale   >= 1.0.0.4 && < 1.0.1
                , time         >= 1.4     && < 1.4.1
 
