--- a/uploadcare.cabal
+++ b/uploadcare.cabal
@@ -19,7 +19,7 @@ library
 
   build-depends: base         >= 4       && < 5
                , bytestring   >= 0.9.2.1 && < 0.9.3
-               , Crypto       >= 4.2.5   && < 4.3
+               , cryptohash   >= 0.7.5   && < 0.8
                , hex          >= 0.1.2   && < 0.2
                , http-conduit == 1.6.0.*
                , http-types   >= 0.7.1   && < 0.8
